crates/math-core/tests/snapshots/error_test__hspace_non_ascii.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\hspace{22öm}"
---
Error: Expected text in string literal.
   ╭─[ <input>:1:11 ]
   │
 1 │ \hspace{22öm}
   │           ─┬  
   │            ╰── expected text in string literal
───╯
